# booker

./: .env-example  Dockerfile  README-EN.md  README.md  docker-compose-example.yml  pyproject.toml
api/: settings.py  urls.py
events/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
events/migrations/: 0001_initial.py  0002_alter_booking_seats_booked_alter_event_max_seats.py
users/: serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
